E洁家政后台项目后台项目完善

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,8 @@
     </dependencies>
 
     <build>
+        <defaultGoal>compile</defaultGoal>
+        <!--配置插件 -->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
